tests/error/left_mutable.gw
// [contains] left-side operand is non-mutable
 2 = 1;
